# segredos-nao-tao-secretos

./: .env  .env.dev  .env.prod  .env.qa  .gitignore  README.md  main.py  main_02.py  main_03.py  pyproject.toml
